testsuite/tests/indexed-types/should_fail/T16356_Fail1.stderr
T16356_Fail1.hs:10:3: error: [GHC-41522]
    • Illegal argument ‘*’ in:
        ‘type T @(*) a = ...’
        The arguments to ‘T’ must all be distinct type variables.
    • In the default associated type family instance declaration for ‘T’
      In the class declaration for ‘C’

